# reflector

./: CMakeLists.txt  README.md  TODO
examples/: example_args.cpp  example_config.cpp  example_di.cpp  example_dump_serialization.cpp  example_rm.cpp  example_rpc.cpp  example_serialization.cpp  example_vector.cpp
include/extras/: argument_parsing.hpp  basic_rpc_dispatcher.hpp
include/reflection/: api.hpp  base.hpp  basic_templates.hpp  basic_types.hpp  bufstring.hpp  class.hpp  config.hpp  default_di_manager.cpp  default_error_handler.cpp  di.hpp  dump.hpp  function.hpp  generated.hpp  generated_function.hpp  generated_rpc.hpp  magic.hpp  rpc.hpp  serialization.hpp  serialization_manager.hpp  serializer.hpp  toolkit.hpp
include/utility/: file_reader_writer.hpp  memory_reader_writer.hpp
src/: gen_function_header.py  gen_magic_header.py  gen_reflection_header.bat  gen_reflection_header.py  gen_rpc_header.py  gen_uuid.py
